test/integration/bad/new/bad_constrained_type_in_fn3.stan
functions{
  // TODO: would be nice to specialize for this mistake
  simplex foo(){
  }
}
